<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorldpayLibrary</string>
    <string name="applicationTerms">Before we transmit your card details, we encrypt them using SSL.\n
        \nAnd we do not store your card details on this device.	
	</string>
    <string name="colour"></string>
    <string name="textSecure">Secure &amp; safe.</string>
    <string name="okButton">OK</string>

    <string name="fNameEdit">First Name</string>
    <string name="lNameEdit">Last Name</string>
    <string name="cnumberEdit">Card Number</string>
    <string name="expiryEdit">XX/XXXX</string>
    <string name="cvcEdit">CVC</string>
    <string name="saveCard">\u00A0 Save card</string>
    <string name="saveApm">\u00A0 Save APM</string>

    <string name="cardDetails">Card details</string>

    <string name="enterCVC">Please insert your CVC</string>
    <string name="ok">OK</string>

    <string name="cardExpiryError">Card Expiry is not valid</string>
    <string name="cardCvcError">CVC is not valid</string>
    <string name="cardNameError">Name on card is not valid</string>
    <string name="cardNumberError">Card Number is not valid</string>

    <string name="apm_details">APM details</string>
    <string name="apmType">APM Type</string>
    <string name="nameError">Name not valid</string>
    <string name="apmNameError">APM name not valid</string>
    <string name="apmShopperCountryError">APM shopper country code not valid</string>
    <string name="countryCode">Country Code</string>
    <string name="no_network">There is no network connectivity</string>
    <string name="paypal">paypal</string>
</resources>
