<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="@string/fNameEdit"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="@string/lNameEdit"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/apmEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/apmType"
                android:text="@string/paypal"
                android:inputType="none"
                android:editable="false"
                android:maxLength="23" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/countryCodeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/countryCode"
                android:inputType="text"
                android:maxLength="23" />

            <TextView
                android:id="@+id/textSecure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSecure" />

            <ImageView
                android:id="@+id/secureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/padlock_black_medium" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>