<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
              android:orientation="vertical">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:src="@drawable/padlock_black_medium" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageTitle"
            android:text="@string/textSecure"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"/>

    </RelativeLayout>

    <View
        android:id="@+id/customLine"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_blue_light"
        android:paddingTop="15dp"/>

    <TextView
        android:id="@+id/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/applicationTerms"
        android:textSize="18sp"/>

    <View
        android:id="@+id/customLine2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <Button
        android:id="@+id/okButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/okButton"/>

</LinearLayout>
